# ts-orderbot

./: .gitignore  Dockerfile  compose.yaml  package.json
src/: server.ts
src/bot/: telegram.ts  tgUtils.ts
src/config/: config.ts
src/controllers/: activeOrders.ts  cancelAllOrders.ts  cancelOrder.ts  getPrice.ts  historicalOrders.ts  placeOrder.ts  walletBalance.ts
src/controllers/binanceControllers/: getPrice.ts  placeOrder.ts
src/exchange/: binance.ts  bybit.ts  index.ts
src/middlewares/: config.ts
src/persistence/: postgres.ts  sqlite.ts
src/routes/: index.ts
src/routes/api/: activeOrders.ts  cancelAllOrders.ts  cancelOrder.ts  getPrice.ts  historicalOrders.ts  placeOrder.ts  walletBalance.ts
src/routes/binanceApi/: getPrice.ts  index.ts  placeOrder.ts
src/types/: exchange.ts  index.ts
tg_bot/: Cargo.toml
tg_bot/src/: main.rs
