[package]
name = "tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.0", features = ["macros"] }
log = "0.4.14"
pretty_env_logger = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
